cabal-version:       >=1.10
name:                hbral
version:             0.1.0.0
synopsis: A library for hetergeneous binary random-access lists
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Wouter Swierstra
maintainer:          w.s.swierstra@uu.nl
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Data.Hbral
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
